--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,24 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.3.2
+  sdk: ^3.3.3
 
 # Add regular dependencies here.
 dependencies:
-  # path: ^1.8.0
+  analyzer: ^6.4.1
+  build: ^2.4.1
+  build_config: ^1.1.1
+  source_gen: ^1.5.0
+  code_builder: ^4.10.0
+  
+  json_annotation: ^4.8.1
+  
+  meta: ^1.12.0
+  path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  
+  json_serializable: ^6.7.1
   lints: ^3.0.0
   test: ^1.24.0
