--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   build_config: ^1.1.1
   source_gen: ^1.5.0
   code_builder: ^4.10.0
+  dart_style: ^2.3.6
   
   json_annotation: ^4.8.1
   
