Implementata funzione che genera la funzione toString, per questo argomanto resta da parametrizzare la creazione della funzione in base alle annotations

--- a/build.yaml
+++ b/build.yaml
@@ -9,6 +9,16 @@ targets:
         enabled: True
         generate_for:
           - lib/models/item/*
+        options:
+          name: RP
+          host: localhost
+          port: 5432
+          user: nempos
+          password: dbpass
+          test: 
+            k1: va1
+            k2: va2
+            k3: va3
       dart_learning:model_copywith_generator:
         enabled: True
         generate_for:
